2009-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-to-file-name): Allow "file:/foo.html" in addition to
	"file://foo.html" and "file:///foo.html".

2009-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bookmark.el (w3m-bookmark-buffer): Use the time 0 as modtime of
	the bookmark buffer by default.

2009-04-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-this-url-1): Pass url to sentinel.
	(w3m-recenter): Save excursion.

2009-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-recenter): New user option.
	(w3m-recenter): New function.
	(w3m-search-name-anchor, w3m-view-this-url-1, w3m-next-anchor)
	(w3m-previous-anchor, w3m-next-form, w3m-previous-form, w3m-next-image)
	(w3m-previous-image): Use it.

2009-04-20  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-local-find-file-regexps): Make regexp-opt group regexps
	explicitly.

2009-04-14  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-cache-available-p): The control of expire is added.
	(w3m-w3m-retrieve-1): The case where the option "no_cache=1" is put has
	been increased.

2009-04-12  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-select-buffer-delete-buffer, w3m-goto-url)
	(w3m-delete-buffers): Unqueue image retrieving process manually.
	(w3m-idle-images-show): Widen narrowing.

	* w3m-proc.el (w3m-process-stop): Don't unqueue image retrieving
	process.

	* w3m.el (w3m-message-silent): New variable.
	(w3m-message): Use it: when the variable is `t', don't show a message.
	(w3m-idle-images-show): Use it.
	(w3m-w3m-dump-head): lexical-let it.
	(w3m-w3m-dump-extra): Ditto.
	(w3m-w3m-retrieve): Ditto.
	(w3m-retrieve-and-render): Ditto.
	(w3m-refresh-minimum-interval): New variable.
	(w3m-check-refresh-attribute): Use it.
	(w3m-view-previous-page): When visiting pages by history-back or
	history-next, don't just ignore refresh, but wait for a while.
	(w3m-idle-images-show): When there are events pended, re-create the